# python-html-reports

./: README.md  main.py  pyproject.toml  utils.py
output/: example_report.html
templates/: base.html
