[tool.poetry]
name = "python-html-reports"
version = "0.1.0"
description = ""
authors = ["RobertoChiosa <roberto.chiosa@polito.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
